syntax = "proto3";

package product;

service ProductsService{
  rpc Create(ProductCreateRequest) returns (ProductCreateResponse);
}

message ProductCreateRequest {
  string title = 1;
  int32 quantity = 2;
}

message ProductCreateResponse {
  bool isCreated = 1;
}
